calculation works and adding to list

--- a/index.html
+++ b/index.html
@@ -24,12 +24,7 @@
           <option value="8">8</option>
         </select>
       </div>
-      <ul id="results">
-        <li>0</li>
-        <li>0</li>
-        <li>0</li>
-        <li>0</li>
-      </ul>
+      <ul id="results"></ul>
       <p id="clear">clear results</p>
 
       <input type="text" name="firstnumber" id="firstnumber" />
